@@ -7,6 +7,8 @@ Plugin Page: http://premium.wpmudev.org/project/classifieds
 = 2.3.6.4 - 2014-09-26
 * Fix BuddyPress profile links redirection
 * Fix Single Classifieds template "posted by" loading gif/redir issue
+* Fix create_classifieds capability added to everyone. Checking role config
+* Hide classifieds menu in Buddpress profile when not having capability to create new classified
 
 = 2.3.6.3 - 2014-09-23
 * Fix author classifieds template showing all classifieds
